--- a/index.html
+++ b/index.html
@@ -2652,17 +2652,20 @@
                     mainContainer.style.flexDirection = 'column';
                     mainContainer.style.alignItems = 'center';
                     mainContainer.style.width = '100%';
+                    mainContainer.style.marginBottom = '15px';
 
-                    // Row (Label + Balls)
+                    // Row (Label + Balls + Buttons)
                     const rowWrapper = document.createElement('div');
                     rowWrapper.style.display = 'flex';
                     rowWrapper.style.alignItems = 'center';
                     rowWrapper.style.justifyContent = 'center';
-                    rowWrapper.style.gap = '10px';
+                    rowWrapper.style.gap = '15px';
+                    rowWrapper.style.width = '100%';
 
                     // Label
                     const labelDiv = document.createElement('div');
                     labelDiv.innerHTML = `<span style="color:#fae100; font-weight:bold; font-size:16px;">[${label}]</span>`;
+                    labelDiv.style.minWidth = '50px';
                     rowWrapper.appendChild(labelDiv);
 
                     // Balls
@@ -2670,52 +2673,60 @@
                     ballsRow.style.display = 'flex';
                     ballsRow.style.justifyContent = 'center';
                     ballsRow.style.gap = '5px';
+                    ballsRow.style.flex = '1';
 
+                    numbers.forEach(n => {
+                        const ball = document.createElement('div');
+                        ball.className = 'ball ' + getBallColor(n);
+                        ball.innerText = n;
+                        ballsRow.appendChild(ball);
+                    });
                     rowWrapper.appendChild(ballsRow);
-                    mainContainer.appendChild(rowWrapper);
 
-                    // Action Row (Copy / OMR)
-                    const actionDiv = document.createElement('div');
-                    actionDiv.style.display = 'flex';
-                    actionDiv.style.gap = '8px';
-                    actionDiv.style.marginTop = '8px';
-                    actionDiv.style.justifyContent = 'center'; // Center the buttons
+                    // Buttons Column (Copy / OMR stacked vertically)
+                    const buttonsCol = document.createElement('div');
+                    buttonsCol.style.display = 'flex';
+                    buttonsCol.style.flexDirection = 'column';
+                    buttonsCol.style.gap = '5px';
+                    buttonsCol.style.minWidth = '90px';
 
                     // Copy Button
                     const copyBtn = document.createElement('div');
                     copyBtn.className = 'omr-action-btn';
                     copyBtn.innerHTML = '📋 복사';
+                    copyBtn.style.justifyContent = 'center';
                     copyBtn.onclick = (e) => {
                         e.stopPropagation();
                         copyToClipboard(numbers);
                     };
-                    actionDiv.appendChild(copyBtn);
+                    buttonsCol.appendChild(copyBtn);
 
                     // OMR Button
                     const omrBtn = document.createElement('div');
                     omrBtn.className = 'omr-action-btn';
                     omrBtn.innerHTML = '📝 OMR 보기';
+                    omrBtn.style.justifyContent = 'center';
                     omrBtn.onclick = (e) => {
                         e.stopPropagation();
                         openOMR(numbers);
                     };
-                    actionDiv.appendChild(omrBtn);
+                    buttonsCol.appendChild(omrBtn);
 
-                    // Append Action Row below balls
-                    mainContainer.appendChild(actionDiv);
+                    rowWrapper.appendChild(buttonsCol);
+                    mainContainer.appendChild(rowWrapper);
 
                     // Link for Manual
                     if (isManual) {
                         const linkBtn = document.createElement('div');
                         linkBtn.innerHTML = '📊 번호별 출현 횟수 참고하기 >';
-                        linkBtn.style.color = '#fae100'; // Make it pop more
+                        linkBtn.style.color = '#fae100';
                         linkBtn.style.fontSize = '12px';
-                        linkBtn.style.marginTop = '10px';
+                        linkBtn.style.marginTop = '5px';
                         linkBtn.style.cursor = 'pointer';
                         linkBtn.style.textDecoration = 'underline';
                         linkBtn.style.opacity = '1';
                         linkBtn.onclick = (e) => {
-                            e.stopPropagation(); // Prevent modal close if any
+                            e.stopPropagation();
                             showStats();
                         };
                         mainContainer.appendChild(linkBtn);
