Reduce result modal height to 70vh

--- a/index.html
+++ b/index.html
@@ -798,10 +798,12 @@
             border-radius: 16px;
             width: 90%;
             max-width: 600px;
+            max-height: 70vh;
             text-align: center;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
             position: relative;
             overflow: hidden;
+            overflow-y: auto;
             cursor: default;
             /* Reset cursor for content area */
         }
