--- a/index.html
+++ b/index.html
@@ -1662,7 +1662,7 @@
             </div>
         </div>
         <div id="resultContent"
-            style="display:none; position:relative; background:linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding:40px 20px; min-height:420px;">
+            style="display:none; position:relative; background:linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding:40px 20px; max-height:70vh; overflow-y:auto;">
             <span
                 style="position:absolute; top:15px; right:20px; color:white; font-size:28px; font-weight:bold; cursor:pointer; z-index:10;"
                 onclick="closeModal()">&times;</span>
