Add !important to zodiac mobile CSS for cache override

--- a/index.html
+++ b/index.html
@@ -379,20 +379,20 @@
         /* Mobile-specific: Change zodiac grid to 3 columns */
         @media (max-width: 768px) {
             .zodiac-grid {
-                grid-template-columns: repeat(3, 1fr);
-                gap: 10px;
+                grid-template-columns: repeat(3, 1fr) !important;
+                gap: 10px !important;
             }
 
             .zodiac-item {
-                padding: 12px;
+                padding: 12px !important;
             }
 
             .zodiac-icon {
-                font-size: 36px;
+                font-size: 36px !important;
             }
 
             .zodiac-name {
-                font-size: 13px;
+                font-size: 13px !important;
             }
         }
 
