Add Recent 3 Weeks filter to frequency statistics

--- a/index.html
+++ b/index.html
@@ -1817,6 +1817,7 @@
                         <span class="freq-filter-item active" onclick="setFreqPeriod(0)">전체</span>
                         <span class="freq-filter-item" onclick="setFreqPeriod(10)">최근 10주</span>
                         <span class="freq-filter-item" onclick="setFreqPeriod(5)">최근 5주</span>
+                        <span class="freq-filter-item" onclick="setFreqPeriod(3)">최근 3주</span>
                     </div>
                     <div class="freq-range-display" id="freqRangeText">
                         데이터 로딩 중...
