--- a/index.html
+++ b/index.html
@@ -649,6 +649,27 @@
             .mobile-br {
                 display: inline;
             }
+
+            /* InfoWindow Badge Grid Optimization */
+            .iw-details {
+                display: grid !important;
+                grid-template-columns: repeat(3, 1fr) !important;
+                gap: 5px !important;
+                margin: 8px 0 12px 0 !important;
+            }
+
+            .iw-tag {
+                margin: 0 !important;
+                padding: 5px 2px !important;
+                font-size: 10px !important;
+                text-align: center !important;
+                background: #f8f9fa !important;
+                border: 1px solid #e0e0e0 !important;
+                display: flex !important;
+                align-items: center !important;
+                justify-content: center !important;
+                white-space: nowrap !important;
+            }
         }
 
         @keyframes rotate {
