--- a/index.html
+++ b/index.html
@@ -3384,7 +3384,7 @@
             const top3 = sortedByDist.slice(0, 3);
 
             if (top3.length > 0) {
-                let msg = "📍 <strong>주변 1등 배출점 (가까운 순)</strong><br>";
+                let msg = "📍 <strong>주변 1등점<br class=\"mobile-br\">(가까운 순)</strong><br>";
                 top3.forEach((item, index) => {
                     const shop = item.marker.shopData;
                     const distStr = item.distance < 1 ? Math.round(item.distance * 1000) + "m" : item.distance.toFixed(1) + "km";
