--- a/index.html
+++ b/index.html
@@ -762,6 +762,10 @@
                 right: 20px !important;
                 z-index: 1001;
             }
+
+            .ai-system-card {
+                padding: 16px 20px !important;
+            }
         }
 
         /* Toast Notification Styles */
@@ -1135,7 +1139,7 @@
         .ai-system-card {
             background: linear-gradient(135deg, #6366f1 0%, #d946ef 100%);
             border-radius: 20px;
-            padding: 20px;
+            padding: 18px 20px;
             margin-bottom: 20px;
             color: white;
             text-align: left;
