--- a/index.html
+++ b/index.html
@@ -772,8 +772,8 @@
 
         /* Toast Notification Styles */
         #toast-container {
-            position: fixed;
-            bottom: 100px;
+            position: absolute;
+            bottom: 30px;
             left: 50%;
             transform: translateX(-50%);
             z-index: 2000;
@@ -781,6 +781,7 @@
             flex-direction: column;
             gap: 10px;
             pointer-events: none;
+            width: fit-content;
         }
 
         .toast {
@@ -1613,7 +1614,6 @@
 </head>
 
 <body>
-    <div id="toast-container"></div>
     <div id="app">
         <div id="sidebar">
             <h1>🎰 KINOV Lotto Map</h1>
@@ -1706,6 +1706,9 @@
                         d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z" />
                 </svg>
             </div>
+
+            <!-- Toast Notification Container (Moved inside map for relative alignment) -->
+            <div id="toast-container"></div>
         </div>
     </div> <!-- end #app -->
 
@@ -3472,7 +3475,7 @@
                     }
                 });
 
-                map.setBounds(bounds, 80, 80, 80, 80);
+                map.setBounds(bounds, 40, 40, 40, 40);
             }
         }
 
